--- a/Wtyczka_KS_VP_dialog_base.ui
+++ b/Wtyczka_KS_VP_dialog_base.ui
@@ -13,41 +13,31 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QComboBox" name="WyborWarstwyComboBox">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>30</y>
-     <width>351</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="calculateHeightButton">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>350</x>
      <y>80</y>
-     <width>101</width>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Oblicz wysokość</string>
    </property>
   </widget>
   <widget class="QLabel" name="WysokoscWynik">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>120</x>
      <y>110</y>
-     <width>261</width>
-     <height>31</height>
+     <width>351</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>7</pointsize>
     </font>
    </property>
    <property name="text">
@@ -70,35 +60,52 @@
   <widget class="QPushButton" name="PoleButton">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>360</x>
      <y>240</y>
-     <width>101</width>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Oblicz pole</string>
    </property>
   </widget>
   <widget class="QLabel" name="PoleWynik">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>290</y>
-     <width>251</width>
-     <height>41</height>
+     <x>130</x>
+     <y>280</y>
+     <width>331</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>7</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>Wysokość punktu:</string>
+    <string>Pole:</string>
+   </property>
+  </widget>
+  <widget class="QgsMapLayerComboBox" name="WyborWarstwyComboBox">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>30</y>
+     <width>351</width>
+     <height>41</height>
+    </rect>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QgsMapLayerComboBox</class>
+   <extends>QComboBox</extends>
+   <header>qgsmaplayercombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
